# tictac

./: README.md  pyproject.toml
docs/: basics.md  codepage.md  ops.yml  syntax.md
tests/: test_list.py  test_string.py
tictac/: __main__.py  cli.py  codepage.py  interpreter.py  list.py  ops.py  parser.py  string.py  utils.py
